fixed links to fit 48px on mobile

--- a/source/stylesheets/grids.css.sass
+++ b/source/stylesheets/grids.css.sass
@@ -104,7 +104,8 @@ img
 @media (max-width : 48em)
   .social
     margin: 1em
-
+  .link
+    margin-bottom: 1em
 @font-face
   font-family: 'rrott-webfont'
   src: url('../fonts/rrott-webfont.eot')
